--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,59 @@
 body{
+	margin: 0;
 	background-color: whitesmoke;
 }
+header{
+	background-color: #A569BD;
+	text-align: center;
+	padding-top: 20px;
+	padding-bottom: 15px;
+}
 
-h1{
+header h1{
 	font-size: 40px;
-	color: #A569BD;
+	color: white;
+	font-family: 'helvetica', 'arial', 'sans-serif;';
+
 }
+
+header img{
+	border-radius: 150px;
+	width: 300;
+	border: 20px solid #5B2C6F;
+	max-width: 100%;
+}
+
+main{
+	margin: 0;
+	max-width: 800px;
+	padding-left: 25%;
+	padding-right: 25%;
+	padding-top: 20px;
+	padding-bottom: 15px;
+}
+
+footer{
+	background-color: #A569BD;
+	text-align: center;
+	padding-top: 20px;
+	padding-bottom: 15px;
+}
+
 h2{
+	font-size: 40px;
+	color: black;
+	font-family: 'helvetica', 'arial', 'sans-serif';
+
+}
+p{
 	font-size: 20px;
-	color: Fuchsia;
+	color: black;
+	font-family: 'helvetica', 'arial', 'sans-serif';
+
 }
-.big{
-	font-size: 60;
-}
-.uppercase{
-	text-transform: uppercase;
-}
-.strike{
-	text-decoration: line-through;
+
+ol{
+	font-size: 20px;
+	color: black;
+	font-family: 'helvetica', 'arial', 'sans-serif';	
 }
