--- a/css/styles2.css
+++ b/css/styles2.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
-    min-height: 100vh; /* Ensure that the content takes at least the full height of the viewport */
+    min-height: 100vh;
 }
 
 header {
@@ -32,8 +32,12 @@ nav {
     justify-content: space-between;
 }
 
+.menu a {
+    text-decoration: none;
+}
+
 .menu button {
-    background-color: #5DADE2; /* Matching the header color */
+    background-color: #5DADE2;
     font-size: 20px;
     color: #fff;
     border: none;
@@ -42,40 +46,46 @@ nav {
 }
 
 .container {
-    flex: 1; /* Allow the container to grow and take remaining vertical space */
+    flex: 1;
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.left-column {
+    flex: 2; /* Takes up 2/3 of the width */
+    box-sizing: border-box;
+    padding: 10px;
+}
+
+.left-column p {
+    font-size: 16px;
+    line-height: 1.6;
+}
+
+.right-column {
+    flex: 1; /* Takes up 1/3 of the width */
+    box-sizing: border-box;
+    padding: 10px;
 }
 
 .row {
     display: flex;
     flex-wrap: wrap;
-    margin: -10px; /* Negative margin to counteract padding in columns */
+    margin: -10px;
 }
 
 .column {
-    flex: 0 0 33.33%; /* 3 columns in a row */
+    flex: 1;
     padding: 10px;
     box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Center items horizontally */
-    text-align: center;
 }
 
 .column img {
     max-width: 100%;
-    border-radius: 40px; /* Add rounded corners */
-}
-
-.label {
-    background-color: #fff;
-    color: #333;
-    padding: 5px 10px;
-    border-radius: 5px;
-    font-size: 16px;
-    margin-top: 10px; /* Adjust the top margin as needed */
+    border-radius: 10px;
 }
 
 footer {
@@ -83,5 +93,5 @@ footer {
     color: #fff;
     text-align: center;
     padding: 10px;
-    margin-top: auto; /* Push the footer to the bottom */
+    margin-top: auto;
 }
