--- a/css/styles2.css
+++ b/css/styles2.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100vh; /* Ensure that the content takes at least the full height of the viewport */
 }
 
 header {
@@ -32,12 +32,8 @@ nav {
     justify-content: space-between;
 }
 
-.menu a {
-    text-decoration: none;
-}
-
 .menu button {
-    background-color: #5DADE2;
+    background-color: #5DADE2; /* Matching the header color */
     font-size: 20px;
     color: #fff;
     border: none;
@@ -55,7 +51,7 @@ nav {
 }
 
 .left-column {
-    flex: 2; /* Takes up 2/3 of the width */
+    flex: 1; /* Takes up 2/3 of the width */
     box-sizing: border-box;
     padding: 10px;
 }
@@ -66,7 +62,7 @@ nav {
 }
 
 .right-column {
-    flex: 1; /* Takes up 1/3 of the width */
+    flex: 2; /* Takes up 1/3 of the width */
     box-sizing: border-box;
     padding: 10px;
 }
@@ -78,10 +74,21 @@ nav {
 }
 
 .column {
+    flex: 0 0 33.33%; /* 3 columns in a row */
+    padding: 10px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Center items horizontally */
+    text-align: center;
+    border: 2px solid transparent; /* Default border with transparency */
+}
+
+/*.column {
     flex: 1;
     padding: 10px;
     box-sizing: border-box;
-}
+}*/
 
 .column img {
     max-width: 100%;
